feat: implement federation trust mark endpoints
