# modules/federation-server/src/main/kotlin/com/sphereon/oid/fed/server/federation/controllers/FederationController.kt
@@ -1,9 +1,16 @@
 package com.sphereon.oid.fed.server.federation.controllers
 
+import com.sphereon.oid.fed.common.exceptions.NotFoundException
+import com.sphereon.oid.fed.openapi.models.TrustMarkListRequest
+import com.sphereon.oid.fed.openapi.models.TrustMarkRequest
+import com.sphereon.oid.fed.openapi.models.TrustMarkStatusRequest
+import com.sphereon.oid.fed.openapi.models.TrustMarkStatusResponse
 import com.sphereon.oid.fed.persistence.Persistence
 import com.sphereon.oid.fed.services.SubordinateService
+import com.sphereon.oid.fed.services.TrustMarkService
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
@@ -15,14 +22,15 @@ class FederationController {
     private val accountQueries = Persistence.accountQueries
     private val entityConfigurationStatementQueries = Persistence.entityConfigurationStatementQueries
     private val subordinateService = SubordinateService()
+    private val trustMarkService = TrustMarkService()
 
     @GetMapping("/.well-known/openid-federation", produces = ["application/entity-statement+jwt"])
     fun getRootEntityConfigurationStatement(): String {
         val account = accountQueries.findByUsername("root").executeAsOneOrNull()
-            ?: throw IllegalArgumentException("Account not found")
+            ?: throw NotFoundException("Account not found")
         val entityConfigurationStatement =
             entityConfigurationStatementQueries.findLatestByAccountId(account.id).executeAsOneOrNull()
-                ?: throw IllegalArgumentException("Entity Configuration Statement not found")
+                ?: throw NotFoundException("Entity Configuration Statement not found")
 
         return entityConfigurationStatement.statement
     }
@@ -30,10 +38,10 @@ class FederationController {
     @GetMapping("/{username}/.well-known/openid-federation", produces = ["application/entity-statement+jwt"])
     fun getAccountEntityConfigurationStatement(@PathVariable username: String): String {
         val account = accountQueries.findByUsername(username).executeAsOneOrNull()
-            ?: throw IllegalArgumentException("Account not found")
+            ?: throw NotFoundException("Account not found")
         val entityConfigurationStatement =
             entityConfigurationStatementQueries.findLatestByAccountId(account.id).executeAsOneOrNull()
-                ?: throw IllegalArgumentException("Entity Configuration Statement not found")
+                ?: throw NotFoundException("Entity Configuration Statement not found")
 
         return entityConfigurationStatement.statement
     }
@@ -56,5 +64,67 @@ class FederationController {
     @GetMapping("/{username}/fetch", produces = ["application/entity-statement+jwt"])
     fun getSubordinateStatement(@PathVariable username: String, @RequestParam("sub") sub: String): String {
         return subordinateService.fetchSubordinateStatementByUsernameAndSubject(username, sub)
+    }
+
+    @GetMapping("/trust-mark-status", produces = ["application/json"])
+    fun getRootTrustMarkStatusEndpoint(
+        @RequestBody request: TrustMarkStatusRequest
+    ): TrustMarkStatusResponse {
+        val account = accountQueries.findByUsername("root").executeAsOne()
+        val status = trustMarkService.getTrustMarkStatus(account, request)
+
+        return TrustMarkStatusResponse(
+            active = status,
+        )
+    }
+
+    @GetMapping("/{username}/trust-mark-status", produces = ["application/json"])
+    fun getTrustMarkStatusEndpoint(
+        @PathVariable username: String,
+        @RequestBody request: TrustMarkStatusRequest
+    ): TrustMarkStatusResponse {
+        val account = accountQueries.findByUsername(username).executeAsOneOrNull()
+            ?: throw NotFoundException("Account not found")
+        val status = trustMarkService.getTrustMarkStatus(account, request)
+
+        return TrustMarkStatusResponse(
+            active = status,
+        )
+    }
+
+    @GetMapping("/trust-mark-list", produces = ["application/json"])
+    fun getRootTrustMarkListEndpoint(
+        @RequestBody request: TrustMarkListRequest
+    ): Array<String> {
+        val account = accountQueries.findByUsername("root").executeAsOne()
+        return trustMarkService.getTrustMarkedSubs(account, request)
+    }
+
+    @GetMapping("/{username}/trust-mark-list", produces = ["application/json"])
+    fun getTrustMarkListEndpoint(
+        @PathVariable username: String,
+        @RequestBody request: TrustMarkListRequest
+    ): Array<String> {
+        val account = accountQueries.findByUsername(username).executeAsOneOrNull()
+            ?: throw NotFoundException("Account not found")
+        return trustMarkService.getTrustMarkedSubs(account, request)
+    }
+
+    @GetMapping("/trust-mark", produces = ["application/trust-mark+jwt"])
+    fun getRootTrustMarkEndpoint(
+        @RequestBody request: TrustMarkRequest
+    ): String {
+        val account = accountQueries.findByUsername("root").executeAsOne()
+        return trustMarkService.getTrustMark(account, request)
+    }
+
+    @GetMapping("/{username}/trust-mark", produces = ["application/trust-mark+jwt"])
+    fun getTrustMarkEndpoint(
+        @PathVariable username: String,
+        @RequestBody request: TrustMarkRequest
+    ): String {
+        val account = accountQueries.findByUsername(username).executeAsOneOrNull()
+            ?: throw NotFoundException("Account not found")
+        return trustMarkService.getTrustMark(account, request)
     }
 }
